[tool.poetry]
name = "finasync"
version = "0.1.0"
description = ""
authors = ["Nicolas Mathey <nicolas@mathey.fr>"]
readme = "README.md"
packages = [{include = "finasync"}]
include = [{ path = "finalynx/finary_api/**/*" }]

[tool.poetry.dependencies]
python = "^3.10"
finary-uapi = "^0.1.7"
docopt = "^0.6.2"
requests = "^2.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
