[tool.poetry]
name = "finasync"
version = "0.1.2"
description = "A simple tool to sync your Finary portfolio values with sources platforms not yet officially integrated."
authors = ["Nicolas Mathey <nicolas@mathey.fr>"]
readme = "README.md"
packages = [{include = "finasync"}]
include = [{ path = "finalynx/finary_api/**/*" }]

[tool.poetry.dependencies]
python = "^3.10"
docopt = "^0.6.2"
requests = "^2.30.0"
# finary_uapi = "^0.1.9"
finary-uapi = { git = "https://github.com/lasconic/finary_uapi.git" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
